--- a/Report/04-traces.tex
+++ b/Report/04-traces.tex
@@ -1,22 +1,15 @@
 \chapter{Generating Traces}\label{ch:traces}
-In this section we describe the process of generating and transforming game traces to IGGP tasks. The first step is to generate the intelligent and random play. To do this we used the Sancho system\cite{Sancho/Github}.
+In this section we describe the process of generating and transforming game traces to IGGP tasks. The first step is to generate the intelligent and random play. To do this we used the Sancho system \cite{Sancho/Github}.
 
 \section{Sancho}\label{sec:sancho}
-To generate optimal gameplay we decided that the best approach was to use a previous winner of the GGP competition. Since the aim of the competition is to find the program that performs best at the set of games used in the IGGP problem we conclude that there is no better way to generate a comprehensive set of game traces.
-\ac{
-I think this part is weak.
-You need to be much clearer.
-Some of the games can be solved \emph{optimally} using minimax or A* search with a heuristic function.
-However, they would take a lot of effort to do that, and it may be computationally expensive.
-Therefore, you use something that is not necessarily optimal, but which can be applied to all the games and which (according to your earlier claim) should be better than an amateur human player.
-}
+Generating intelligent gameplay is a nebulous task. Defining intelligence is no small ask. Using optimal gameplay traces or human generated gameplay would be ideal, however this is infeasible in the scope of this project. Provably optimal traces were experimented with. An optimal player for \textit{eight puzzle} using A* with an admissible heuristic was created with the intention of writing optimal players for more games such as \textit{tic tac toe} and \textit{knights tour}. However when testing the Sancho system it was found that game traces produced in a small sample were all of optimal quality. In fact for \textit{eight puzzle} it generates provably optimal traces as described later in the chapter. It was decided that it would be easier and we would generate a possibly more a consistent level of play across all games using the GGP player Sancho.
 
-The winner of the 2014 GGP competition 'Sancho' was selected \footnote{http://ggp.stanford.edu/iggpc/winners.php accessed on 12/03/2020} since they are the most recent winner to have published their code\cite{Sancho/Github}. Some small modifications to the information logged by the game server are made but otherwise the code is unchanged.
+The winner of the 2014 GGP competition ``Sancho'' was selected\footnote{http://ggp.stanford.edu/iggpc/winners.php accessed on 12/03/2020} since they are the most recent winner to have published their code \cite{Sancho/Github}. Some small modifications to the information logged by the game server are made but otherwise the code is unchanged. Since the aim of the GGP competition is to find the program that performs best at the set of games used in the IGGP problem we conclude that this system was the best general game player to use. We can assume Sancho can play above amateur human level across the majority of games in the the dataset. At the annual GGP competition there is also a match held at the end where the human creators of the game players themselves play against the winner. The humans almost never win \cite{Genesereth/GGPOverview}.
 
-The core of algorithm used by Sancho is the Monte Carlo tree search (MCTS).
+Sancho uses a range of techniques to generate gameplay. The core of algorithm used by Sancho is the Monte Carlo tree search (MCTS).
 
 \subsection{Monte Carlo Tree Search}
-Given a game state the basic MCTS will return the most promising next move. The algorithm achieves this by simulating random playouts of the game many times. The technique was developed for computer Go but has since been applied to play a wide range of games effectively including board games and video games\cite{Silver/MCTS,Chaslot/MCTS}.
+Given a game state the basic MCTS will return the most promising next move. The algorithm achieves this by simulating random playouts of the game many times. The technique was developed for computer Go but has since been applied to play a wide range of games effectively including board games and video games \cite{Silver/MCTS,Chaslot/MCTS}.
 
 The use of random simulation to evaluate game states is a powerful tool. Information about the game such as heuristics for evaluating non terminal states are not needed at all, the rules of the game are enough on their own. In the case of the GGP problem this is ideal. The rules of the game are only revealed shortly before the game is played meaning deriving effective heuristics is a hard problem.
 
@@ -29,23 +22,13 @@ In our case all games being played are sequential, finite and discrete so we onl
 	\label{fig:game-tree}
 \end{figure}
 
-The MCTS is a tree search algorithm, the tree being searched is the game tree. A game tree being a tree made up of nodes representing states of the game and the children of each node being all the states that can be moved to from that state (see figure \ref{fig:game-tree}). The leaves of this tree are the terminal states. The search is a sequence of traversals of the game tree. A \textit{traversal} is a path that starts at the root node and continues down until it reaches a node that has at least one unvisited child (not necessarily a terminal state). One of these unvisited children are then chosen to be the start state for a simulation of the rest of the game. The simulation chooses random moves, playing the game out to a terminal state. The result of the simulation is propagated back from the node it started at all the way to the root node to update statistics attached to each node. These statistics are used to choose future paths to traverse so that more promising moves are investigated with higher probability.
-
-Exactly how the tree search algorithm chooses new nodes to simulate is where the complexity lies. The node chosen by traversal of the tree should strike a balance between exploiting promising nodes and exploring nodes with few simulations. The Upper Confidence Bound for trees algorithm was designed to do exactly this\cite{Kocsis/UCT}. The algorithm chooses a child node for each state based on the UTC formula. The formulae can be written as: \[UTC(v_i) = \frac{Q(v_i)}{N(v_i)} + c\sqrt{\frac{ln(N(v_i))}{N(v_i)}}\] Where we have:
-\begin{itemize}
-\item $v_i$ is node $v$ after move $i$
-\item $Q(v)$ is the number of winning simulations that have taken place below it
-\item $N(v)$ is the number of simulations that have taken place below it
-\end{itemize}
-The function is the sum of two components. The first part $\frac{Q(v_i)}{N(v_i)}$ is called the exploitation component. It is a ratio of winning to loosing simulation that resulted from making this move. This encourages traversal of promising nodes that have a high win rate. However, if only this factor was used the algorithm would quickly find a winning node and only explore that hence we need a second component: the exploration factor. This part $c\sqrt{\frac{ln(N(v_i))}{N(v_i)}}$ favours nodes that have not yet been explored. The value $c$ is a constant that balances the two components, it can be adjusted depending on the use case.
+The MCTS is a tree search algorithm, the tree being searched is the game tree. Each node on the game tree represents a state (figure \ref{fig:game-tree}). The search is a sequence of traversals of the game tree. A \textit{traversal} is a path that starts at the root node and continues down until it reaches a node that has at least one unvisited child (not necessarily a terminal state). One of these unvisited children are then chosen to be the start state for a simulation of the rest of the game. The simulation chooses random moves, playing the game out to a terminal state. The result of the simulation is propagated back from the node it started at all the way to the root node to update statistics attached to each node. These statistics are used to choose future paths to traverse so that more promising moves are investigated with higher probability.
 
 \subsubsection{Use of MCTS in Sancho}
 
-Sancho makes a few modifications to MCTS\footnote{https://sanchoggp.blogspot.com/2014/05/what-is-sancho.html accessed on 15/03/2020}. The main one being the adding of heuristics. The tree is also replaced with a more general graph which allows for transitions between lines of play without duplication of states. There are also optimisations to increase efficiency.
+Sancho makes a few modifications to MCTS\footnote{https://sanchoggp.blogspot.com/2014/05/what-is-sancho.html accessed on 15/03/2020}. The main one being the adding of heuristics as well as optimisations to increase efficiency.
 
-In GGP matches a period of time before the match is given in which to do pre match calculations. Sancho uses this period to derive basic heuristics and optimise the value of $c$ in the $UTC$ formulae.
-
-A heuristic should take a game state or move and return a value based on how promising that state or move is in relation to the goal state. To take the heuristics into account when choosing the next state to explore each node (state) $v$ is seeded with a heuristic value on creation.
+In GGP matches a period of time before the match is given in which to do pre match calculations. Sancho uses this period to derive basic heuristics. A heuristic should take a game state or move and return a value based on how promising that state or move is in relation to the goal state. 
 
 The identification of possible heuristics takes place in two stages. The first of these is static analysis of the game rules. This static analysis identifies possible heuristics that can be applied to the current game. These include things like piece capture: if certain rules indicate capture of a piece these can be selected against. Another is numeric quantity detection: a number in the state acts as a heuristic (like number of coins a player has). The second stage is simulation of the game. Many (possibly tens of thousands) of full simulations of the game are run. After the simulations are complete a correlation coefficient is calculated between each candidate heuristic's observed values and the eventual score achieved in the game. Those heuristics that show correlation above a fixed threshold are then enabled, and will be used during play to guide the exploration of the MCTS.
 
@@ -53,22 +36,22 @@ The identification of possible heuristics takes place in two stages. The first o
 
 Monte Carlo simulations are used for a large number of the games available however Sancho identifies games that can be solved more efficiently in other ways. Any single player game in the GGP dataset can be analysed using puzzle solving techniques.
 \subsubsection{Puzzle Solving}
-A single player game in the GGP dataset is necessarily a deterministic game of complete information. This is due to the constraints of the Game Description Language, it is not possible to express anything more. This gives the useful constraint that any solution found in a playout of the game will always remain valid since the game is completely deterministic. Sancho identifies these single player games and attempts to derive heuristics. Where an obvious goal state exists a distance metric such as the hamming distance between two states can be applied. A* search can then be used to find optimal solutions. For some games, such as eight puzzle the hamming distance is an admissible heuristic so Sancho finds a provably optimal solution.
+A single player game in the GGP dataset is necessarily a deterministic game of complete information. This is due to the constraints of the Game Description Language, it is not possible to express anything more. This gives the useful constraint that any solution found in a playout of the game will always remain valid since the game is completely deterministic. Sancho identifies these single player games and attempts to derive heuristics. Where an obvious goal state exists a distance metric such as the hamming distance between two states can be applied. A* search can then be used to find optimal solutions. For some games, such as \textit{eight puzzle} the hamming distance is an admissible heuristic so Sancho finds a provably optimal solution.
 
 \subsubsection{Static analysis}
 
-Sancho also does static analysis of the game rules. It determines game predicates that if true imply the goal will never be reached in any proceeding state as well as predicates that guarantee that the goal will be reached in a future state. An example of this is a game such as untwisty corridor (the game is effectively a maze where if you immediately lose if you step off a ``safe'' path). If the safe path is stepped off then the goal can never be reached so any state not on the safe path is avoided.
+Sancho also does static analysis of the game rules. It determines game predicates that if true imply the goal will never be reached in any proceeding state as well as predicates that guarantee that the goal will be reached in a future state. An example of this is a game such as \textit{untwisty corridor} (the game is effectively a maze where you immediately lose if you step off a ``safe'' path). If the safe path is stepped off then the goal can never be reached so any state not on the safe path is avoided.
 
 \subsection{Sancho and IGGP}
-Sancho represents the best available automated player of the games in the IGGP dataset. Its level of play for most games is above that of an amateur human as has been shown in the Carbon versus Silicone matches at the GGP competition\cite{Genesereth/GGPOverview}. Sancho generally provides good quality intelligent play however in some cases it has struggled.
+Sancho generally provides good quality intelligent play on the games in the IGGP dataset however in some cases it has struggled.
 
-The IGGP dataset used for the experiments contains several games based on game theory. Games such as the Prisoner Dilemma where player can choose to either \textit{cooperate} or \textit{defect}. If both player cooperate then they both get 3 point. If one defects and the other tried to cooperate the cooperator gets 0 points and the defector gets 5. If they both defect both get 0. There are several rounds of this in one game playout. A human playing this might choose to try and cooperate, hoping that that the other player will too however Sancho has been observed to always defect. This result is predictable since this is the only strong Nash equilibrium for this game however it is hard to justify this as ``human quality play''.
+The dataset contains several games based on game theory. Games such as the \textit{prisoner dilemma} where player can choose to either \textit{cooperate} or \textit{defect}. If both players cooperate then they both get 3 points. If one defects and the other tried to cooperate the cooperator gets 0 points and the defector gets 5. If they both defect both get 0. There are several rounds of this in one game playout. A human playing this might choose to try and cooperate, hoping that that the other player will too however Sancho has been observed to always defect. This result is predictable since this is the only strong Nash equilibrium for this game however it is hard to justify that this is ``human quality play''.
 
 
-\section{Generating and transforming the traces}
+\section{Generating and transforming the traces}\label{sec:gen}
 To determine the influence of the quality of training data upon the ability of learners to solve the IGGP problem we initially generate the game traces.
 
-The general game playing community have developed a codebase that provides the basic functionality for hosting a match between GGP agents\footnote{https://github.com/ggp-org/ggp-base}. This codebase along with the GGP agent Sancho were used to generate the datasets. The codebase includes a very basic random GGP player that will, given a GDL game description, play a random legal move every turn. It uses the GDL description to generate all possible legal moves given the current game state then chooses one uniformly at random. To generate the random traces for a game of $x$ players $x$ random GGP players were pitted against one another. The same method was used to generate the intelligent traces with Sancho playing instead of the random gamers.
+The general game playing community have developed a codebase that provides the basic functionality for hosting a match between GGP agents\footnote{https://github.com/ggp-org/ggp-base accessed on 13/03/2020}. This codebase along with the GGP agent Sancho were used to generate the datasets. The codebase includes a very basic random GGP player that will, given a GDL game description, play a random legal move every turn. To generate the random traces for a game of $x$ players $x$ random GGP players were pitted against one another. The same method was used to generate the intelligent traces with Sancho playing instead of the random gamers.
 
 Information about games is represented as sets of ground atoms. These atoms can be divided into two sets, the atoms that can change during the game and the atoms that can not. The set of atoms that can change can again be divided in two, the action atoms $A$ and the state atoms $S$.
 
@@ -82,9 +65,7 @@ The set $S$ represents all atoms that can change from one state to the other. Ex
 
 The set $A$ is the set of ground atoms representing the actions that can be taken. The moves that each player makes are taken from this set. For a game such as \textit{eight puzzle} these would consist of the set of atoms:
 \[\{\texttt{( move i j )}| 0<i\leq 9, 0<j\leq 9\}\]
-Each atom represent sliding the tile at $(i,j)$ into the space. For the game \textit{tic tac toe} these atoms would be the set:
-\[\{\texttt{( mark i j )}|0<i\leq 3, 0<j\leq 3\}\]
-These atoms represent marking the square $(i,j)$ with the players symbol. To represent a player not making a move we also always have $noop \in A$.
+Each atom represent sliding the tile at $(i,j)$ into the space. To represent a player not making a move we also always have $noop \in A$.
 
 \subsubsection{Game traces}
 
@@ -108,18 +89,9 @@ We flatten the sequences of $(m_{i,r_1},...,m_{i,r_k})$ in \textit{moves}, $(l_{
 \[(m_{i,r_1},m_{i,r_2}) = \texttt{[( move 2 2 ), ( move 2 3 )]}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \]
 and $r_1 = black$ and $r_2 = white$ then it would be replaced by $m_i$
 \[m_i = \texttt{\{( move black 2 2 ), ( move white 2 3 )\}}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \]
-\textit{moves} is now a sequence $(m_1,...,m_n)$. With \textit{legals} a similar intuative flattening procedure is applied
-\begin{align*}
-(l_{i,r_1},l_{i,r_2}) =\ [&\{\texttt{( move 2 2 ), ( move 1 1 ), ( move 1 3 )}\}, \\
-&\{\texttt{( move 2 3 ), ( move 1 2 )}\}]
-\end{align*}
-and $r_1 = black$ and $r_2 = white$ then it would be replaced by $l_i$
-\begin{align*}
-l_i = \{&\texttt{( move black 2 2 ), ( move black 1 3 ),}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \\ &\texttt{( move white 2 3 ), ( move white 1 2 )}\}
-\end{align*}
-Again we now have that legals is a sequence $(l_1,...,l_n)$. The same procedure is also applied to \textit{goals} giving us a single flat list with the roles included in each predicate. Since terminal does not contain any extra information no processing at this stage is needed.
+\textit{moves} is now a sequence $(m_1,...,m_n)$. With \textit{legals} and \textit{goals} a similar intuitive flattening procedure is applied. All four predicates are now represented by a single flat list.
 \subsubsection{Building the traces}
-The trace function is defined for \textit{legal}, \textit{goal}, \textit{next} and \textit{terminal}. We treat the output of the zip function \ac{what is the zip function?} as a set. We define $S[p/q]$ on a set $S$ for predicates $p$ and $q$ to be the substitution of all instances of $q$ in $S$ for $p$.
+The trace function is defined for \textit{legal}, \textit{goal}, \textit{next} and \textit{terminal}. We treat the output of the zip function, which takes a pair of lists and turns them into a list of pairs, as a set rather than a list. We define $S[p/q]$ on a set $S$ for predicates $p$ and $q$ to be the substitution of all instances of $q$ in $S$ for $p$.
 \begin{align*}
 &\Lambda_{legal} &&= trace_{legal}(states,legal) &&= \text{zip } states\ legal[\texttt{legal}/\texttt{true}] \\
 &\Lambda_{goal} &&= trace_{goal}(states,goals) &&= \text{zip \textit{states goal}} \\
@@ -144,4 +116,4 @@ tri&ple_2(\Lambda_p) = \text{map } f\ \Lambda \\
 \end{align*}
 We generate the IGGP task with $triples_1$ and $triples_2$ as below:
 \[\Delta = triples_1(\Lambda_{goal}) \cup triples_1(\Lambda_{terminal}) \cup triples_2(\Lambda_{next}) \cup triples_2(\Lambda_{legal})\]
-The IGGP task $\Delta$ is set to the ILP systems as described in chapter \ref{ch:methodology}
+The IGGP task $\Delta$ is set to the ILP systems as described in chapter \ref{ch:methodology}.
