--- a/Report/project.bib
+++ b/Report/project.bib
@@ -681,3 +681,30 @@ url="https://doi.org/10.1007/s10994-019-05834-x"
 	biburl    = {https://dblp.org/rec/journals/jmlr/AhlgrenY13.bib},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@book{IntroToAlgorithms,
+	author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+	title = {Introduction to Algorithms, Third Edition},
+	year = {2009},
+	isbn = {0262033844},
+	publisher = {The MIT Press},
+	edition = {3rd}
+}
+
+@book{ELO,
+	added-at = {2019-01-08T11:02:22.000+0100},
+	address = {New York},
+	author = {Elo, Arpad E.},
+	biburl = {https://www.bibsonomy.org/bibtex/24148b608c40e521f795b8057a924b5d0/dschiffner},
+	description = {Amazon.com: The Rating Of Chess Players, Past & Present (9780668047210): Arpad E Elo: Books},
+	interhash = {d2e8d25f3d6bf5c5d387a8d81f15eb45},
+	intrahash = {4148b608c40e521f795b8057a924b5d0},
+	isbn = {0668047216 9780668047210},
+	keywords = {cati},
+	publisher = {Arco Pub.},
+	refid = {4504131},
+	timestamp = {2019-01-08T13:02:59.000+0100},
+	title = {The Rating of Chessplayers, Past and Present},
+	year = 1978
+}
+
