--- a/Report/02-related.tex
+++ b/Report/02-related.tex
@@ -1,31 +1,23 @@
 \chapter{Related work}
 
-\section{GGP}
+\section{General Game Playing}
 
-General game playing is a framework for evaluating an \ac{agenet's} general intelligence \ac{accross} a wide range of tasks \cite{Cropper/IGGP,Genesereth/GGPOverview}. The idea is that agents are able to accept declarative descriptions of arbitrary games at run time and are able to use such descriptions to play those games effectively. All the games are finite, discrete, deterministic multi-player games of complete information\cite{GDL_Spec}. The games in the GGP competition game set vary in number of players, dimensions and complexity. For example games such as rock paper scissors have 0 dimensions and only 10 rules in the given GGP rule set, more complex games such as checkers has 52 rules and are 2 dimensional. There are also single player games such as Eight Puzzle or Fizz Buzz.
+General Game Playing (GGP) is a framework for evaluating an agent's general intelligence across a wide range of tasks \cite{Cropper/IGGP,Genesereth/GGPOverview}. The agents accept declarative descriptions of arbitrary games at run time and use the descriptions to play those games effectively. All the games are finite, discrete, deterministic multi-player games of complete information \cite{GDL_Spec}. The games in the GGP competition game set vary in number of players, dimensions and complexity. For example games such as \textit{rock paper scissors} have 0 dimensions and only 10 rules in the given GGP rule set, more complex games such as \textit{checkers} has 52 rules and are 2 dimensional. There are also single player games such as \textit{eight puzzle} or \textit{fizz buzz}.
 
-The agents play games selected at random. They are sent a listing of the rules described in the Game Description Language (GDL). GDL is a language based on first order logic (section \ref{sec:GDL}). The list of games along with their descriptions are available online\footnote{http://ggp.stanford.edu/iggpc/}. Matches take place through an online framework called the Gamemaster. The agents connect to an online Game Manager (part of the Gamemaster) service which arbitrates individual matches. After the players have establish a HTTP connection to the Game Manager one of the players takes the role of game director. The game director then broadcasts the following information to the game manger: \begin{enumerate*}[label={\arabic*)}]
-	\item the name of a game that is know to the manager
-	\item the required number of players
-	\item the amount of time to be given for each tern
-\end{enumerate*}. The match can then be started by pressing a start button, when pressed the agents will receive a \textit{Start} message including the role of the player (e.g. black or white in chess) and a description of the game in GDL. The Game Manger communicates all instructions to the players through HTTP\cite{Genesereth/GGPOverview}.
+The agents play games selected at random. They are sent a listing of the rules described in the Game Description Language (GDL). GDL is a language based on first order logic (section \ref{sec:GDL}). Matches take place through an online framework called the Gamemaster which arbitrates the competition  \cite{Genesereth/GGPOverview}.
 
-In 2005 an annual International General Game Playing Competition (IGGPC) was set up which still runs to this day\cite{Kowalski/GGP}. Each year hopeful participants pit GGP agents against one another to determine the most effective system. The competitors take part in a series of rounds of increasing complexity. The agent that wins the most games in these rounds is declared victorious. The 2014 winner Sancho is used in this paper to generate optimal \ac{are they optimal??} game traces for the IGGP task.
+In 2005 an annual International General Game Playing Competition (IGGPC) was set up \cite{Kowalski/GGP}. Each year hopeful participants pit GGP agents against one another to determine the most effective system. The competitors take part in a series of rounds of increasing complexity. The agent that wins the most games in these rounds is declared victorious. The 2014 winner Sancho is used in this paper to generate traces of intelligent game play for the IGGP task.
 
 The game descriptions written in GDL used in the GGP competition can be used as example rule sets for systems in Inductive General Game Playing (IGGP) as the output the learners would ideally generate. The descriptions of the games used in GGP are not necessarily minimal so it is possible that an ILP system could generate a more concise rule set than the GGP descriptions.
 
-\subsection{GDL}\label{sec:GDL}
-Game definition \ac{is it not Description} language is the formal language used in the GGP competition to specify the rules of the games\cite{GDL_Spec}. The language is based off a logical programming language \textit{datalog}, a subset of Prolog. To understand the semantics of GDL it helps to first cover logic programming as a field of study.
+\subsection{Game Description Language}\label{sec:GDL}
+Game Description Language (GDL) is the formal language used in the GGP competition to specify the rules of the games \cite{GDL_Spec}. The language is based off a logical programming language \textit{datalog}, a subset of Prolog. To understand the semantics of GDL it helps to first cover logic programming as a field of study.
 \subsubsection{Logic Programming}
-Logic programming is a programming paradigm based on formal logic. Programs are made up of facts and rules. Rules are made up of two parts: the head and the body. They can be read as logical implications where the conjunction of all the elements in the body imply the head. The syntax is different for different logical programming languages but the head is usually written before the body in reverse implication. For example \texttt{a <= b,c}  \ac{<= is odd syntax, is that specific to the GDL? Logic programming notation is usually $\leftarrow$ or \texttt{:-}} states that \texttt{b} and \texttt{c} imply \texttt{a}. A fact is simply a rule without a body, that is, a statement that is taken as true. The compiler \ac{I would say interpreter} takes queries and returns weather \ac{whether} they are true \ac{of} false. If there are free variables in the query the compiler assigns them values for which the query is true. Logical programming is good for symbolic non-numeric computation\cite{Bratko}. Prolog is one of the most well know logical programming languages\cite{SWIPL} and provides a good introduction to the field. It is discussed in section \ref{sec:prolog}. Logical programming is well suited to solving problems that involve well defined objects and relations between them, such as a GGP game.
+Logic programming is a programming paradigm based on formal logic. Programs are made up of facts and rules. Rules are made up of two parts: the head and the body. They can be read as logical implications where the conjunction of all the elements in the body imply the head. The syntax is different for different logical programming languages but the head is usually written before the body in reverse implication. For example \texttt{a :- b,c}. A fact is simply a rule without a body, that is, a statement that is taken as true. The interpreter takes logical statements as queries and returns whether they are true or false. If there are free variables in the query the interpreter assigns them values for which the query is true. Logical programming is good for symbolic non-numeric computation \cite{Bratko}. It is well suited to solving problems that involve well defined objects and relations between them, such as a GGP game.
 \subsubsection{Usefulness of GDL}
-The game description language was designed specifically to represent finite, discrete, deterministic multi-player games of complete information. It is suited to specifying game rules because:
-\begin{itemize}
-\item It is a purely declarative language
-\item It has restrictions to ensure that all questions of logical entailment are decidable
-\item There are some reserved words (such as \textit{terminal} or \textit{goal}), which tailor the language to the task of defining games
-\end{itemize}
-These descriptions define the games in terms of a set of true facts capturing the information needed to give the following predicates:
+The game description language was designed specifically to represent finite, discrete, deterministic multi-player games of complete information. The language is based on \textit{Datalog} and the property of any question of logical entailment being decidable is retained.
+
+The games are defined in terms of a set of true facts capturing the information needed to give the following predicates:
 \begin{itemize}
 \item The initial game state
 \item The goal state
@@ -38,127 +30,67 @@ In addition, logical rules are used to describe the following:
 \item The termination and goal conditions
 \end{itemize}
 
-\ac{datalog usually starts with a capital, e.g. Datalog}
-The GDL language is an extension of \textit{datalog$^{\neg}$}, that is datalog with stratified negation\cite{GDL_Spec}. \textit{datalog} allows only rules consisting of a conjunction of positive atoms that imply a single atom. \textit{datalog$^{\neg}$} allows for negative as well as positive atoms\cite{Alice/Foundations}. GDL also allows for some functional symbols, that is predicates containing other predicates however it restricts to keep the finite model property that is inherent to \textit{datalog}\cite{GDL_Spec}.
+The GDL language is an extension of \textit{Datalog$^{\neg}$}, that is \textit{Datalog} with stratified negation \cite{GDL_Spec}. \textit{Datalog} allows only universally quantified rules consisting of a conjunction of positive atoms that imply a single atom. \textit{Datalog$^{\neg}$} allows for negative as well as positive atoms \cite{Alice/Foundations}. GDL also allows for some functional symbols, that is predicates containing other predicates however it restricts to keep the finite model property that is inherent to \textit{Datalog} \cite{GDL_Spec}.
 
-In GDL variables are written with the symbol \texttt{?} before them and rules are written starting with \verb|=>| followed by the head followed by the body predicates which are interpreted as a conjunction. For example \[\texttt{(<= (next (cell ?x ?y ?player)) (does ?player (mark ?x ?y)))}\] in first order logic this would be written \[does(player,(mark(x,y))) \rightarrow cell(x,y,player)\]
-\ac{what about quantifiers?}
-GDL also reserves certain words which are interpreted in special ways:
-\begin{itemize}
-	\item \texttt{true(?f)} - Atom \texttt{?f} is true in the current game state
-	\item \texttt{does(?r,?m)} - Player \texttt{?r} performs action \texttt{?m} in the current state
-	\item \texttt{next(?f)} - Atom \texttt{?f} will be true in the next game state
-	\item \texttt{legal(?r,?m)} - Action \texttt{?m} is a legal move for player \texttt{?r} in the current game state
-	\item \texttt{goal(?r,?n)} - Player \texttt{?r} performs action \texttt{?m} in the current game state
-	\item \texttt{terminal} - The current state is terminal
-	\item \texttt{init(?f)} - Atom \texttt{?f} is true in the initial game state
-	\item \texttt{role(?n)} - The Constant \texttt{?n} denotes a player
-	\item \texttt{distinct(?x,?y)} - \texttt{?x} and \texttt{?y} are syntactically different
-\end{itemize}
-In the IGGP problem the given task is to generate the rules to predict the values for the goal, the next state, the legal states and the terminal predicates.
+In GDL variables are written with the symbol \texttt{?} before them and rules are written starting with \verb|=>| followed by the head followed by the body predicates which are interpreted as a conjunction. All rules are universally quantified. For example
+\[\texttt{(<= (next (cell ?x ?y ?player)) (does ?player (mark ?x ?y)))}\]
+in first order logic this would be written
+\[\forall x. \forall y. \forall player. does(player,(mark(x,y))) \rightarrow cell(x,y,player)\]
+GDL also reserves certain words as listed in table \ref{tab:GDL}
+\begin{center}
+	\begin{table}
+	\begin{tabular}{| l | l |}
+		\hline
+		\texttt{true(?f)} & Atom \texttt{?f} is true in the current game state \\ \hline
+		\texttt{does(?r,?m)} & Player \texttt{?r} performs action \texttt{?m} in the current state \\ \hline
+		\texttt{next(?f)} & Atom \texttt{?f} will be true in the next game state \\ \hline
+		\texttt{legal(?r,?m)} & Action \texttt{?m} is a legal move for player \texttt{?r} in the current game state\\ \hline
+		\texttt{goal(?r,?n)} & Player \texttt{?r} performs action \texttt{?m} in the current game state\\ \hline
+		\texttt{terminal} & The current state is terminal\\ \hline
+		\texttt{init(?f)} & Atom \texttt{?f} is true in the initial game state\\ \hline
+		\texttt{role(?n)} & The Constant \texttt{?n} denotes a player\\ \hline
+		\texttt{distinct(?x,?y)} & \texttt{?x} and \texttt{?y} are syntactically different\\
+		\hline
+
+	\end{tabular}
+	\caption{The reserved predicates in GDL}
+\label{tab:GDL}
+\end{table}
+
+\end{center}
 
 
+In the IGGP problem (section \ref{sec:IGGP}) the given task is to generate the rules to predict the values for the goal, the next state, the legal states and the terminal predicates.
 
-\section{IGGP}
-The Inductive General Game Playing (IGGP) problem is an inversion of the GGP problem. Rather than using game rules to generate gameplay the learner must learn the rules of the game by watching others play \ac{I would say from observations of game play - if you say watching then someone might think that it is a visual problem}. The learner is given a set of game traces and is tasked with using them to induce (learn) the rules of the game that could have produced the traces\cite{Cropper/IGGP}. IGGP was designed as a way of benchmarking machine learning systems.
+
+\section{Inductive General Game Playing}\label{sec:IGGP}
+The Inductive General Game Playing (IGGP) problem is an inversion of the GGP problem. Rather than using game rules to generate gameplay the learner must learn the rules of the game from observations of game play. The learner is given a set of game traces and is tasked with using them to induce (learn) the rules of the game that could have produced the traces \cite{Cropper/IGGP}. IGGP was designed as a way of benchmarking machine learning systems.
 
 The definition of task itself is based on the Inductive Logic Programming problem.
 
-\subsection{ILP}\label{sec:ILP}
-Inductive logic programming is a form of machine learning that uses logic programming to represent examples, background knowledge, and learned programs\cite{Cropper/EfficientLearning}. To learn the program is supplied with positive examples, negative examples and the background knowledge. In the general inductive setting we are provided with three languages.
+\subsection{Inductive Logic Programming}\label{sec:ILP}
+Inductive Logic Programming (ILP) is a form of machine learning that uses logic programming to represent examples, background knowledge, and learned programs \cite{Cropper/EfficientLearning}. To learn the program is supplied with positive examples, negative examples and the background knowledge. In the general inductive setting we are provided with three languages.
 \begin{itemize}
 \item $\mathcal{L}_O$: the language of observations (positive and negative examples)
 \item $\mathcal{L}_B$: the language of background knowledge
 \item $\mathcal{L}_H$: the language of hypotheses
 \end{itemize}
-The general inductive problem is as follows: given a consistent set of examples or observations $O \subseteq \mathcal{L}_O$ and consistent background knowledge $B \subseteq \mathcal{L}_B$ find an hypothesis $H \in \mathcal{L}_H$ such that \[B \wedge H \vDash O\] \cite{Muggleton/ILP}
-That is that the generated hypothesis and the background knowledge imply the positive examples and not imply the negative examples.
+The general inductive problem is as follows: given a set of positive examples $E^+ \subseteq \mathcal{L}_O$, negative examples $E^- \subseteq \mathcal{L}_O$ and  background knowledge $B \subseteq \mathcal{L}_B$ find an hypothesis $H \in \mathcal{L}_H$ such that 
+\[B \cup H \models E^+ \wedge B \cup H \not\models E^-\]
+\cite{Muggleton/ILP}
+That is that the generated hypothesis and the background knowledge imply the positive examples and do not imply the negative examples.
 
-\subsubsection{Grandparent example}
-A classic illustration of the problem is the learning of the grandparent relation. Here we want to derive a logical program that given information about who is a parent of whom will be able to tell us the all the people each person is a grandparent of. It needs to capture the idea that if $Y$ is a parent of $X$ and $Z$ a parent of $Y$ then $Z$ is a grandparent of $X$. We are given the following background knowledge.
-
-\[
-B=
-\begin{cases}
-mother(alice,jane)\\
-mother(jane,dave)\\
-mother(alice,henry)\\
-father(henry,bob)
-\end{cases}
-\]
-Here we are not directly given the parent relation. This will have to be induced by the learner. The positive and negative observations are given by $O^+ \cap \neg O^- = O$.
-\[
-O^+=
-\begin{cases}
-grandparent(alice,bob)\\
-grandparent(alice,dave)
-\end{cases}
-O^-=
-\begin{cases}
-grandparent(alice,jane)\\
-grandparent(henry,bob)\\
-grandparent(dave,henry)
-\end{cases}
-\]
-\ac{$O^+ \cap \neg O^- =O$ I do not understand this part}
-The program we induce would hopefully look something like this:
-\[H=\begin{cases}
-grandparent(X,Y) \leftarrow parent(X,Z) \wedge parent(Z,Y)\\
-parent(X,Y) \leftarrow mother(X,Y)\\
-parent(X,Y) \leftarrow father(X,Y)
-\end{cases}\]
-It should hopefully be clear that this program satisfies $B \wedge H \vDash O$
-
-ILP systems generally regard ILP as a search problem. The search space is the set of well formed hypothesis. Often a set of inference rules are applied to the starting hypothesis, the new hypothesise are then pruned and expanded according to how large $E\subseteq O$ is in $B \wedge H \vDash E$. When all the observations are implied then a correct program has been found.
 
 \subsection{Back to IGGP}
 
-In IGGP we also have the idea of background knowledge and positive or negative observations. The task is given as a triple $\{(B,E^+,E^-)\}$. The positive examples $E^+$, the negative examples  $E^-$ and the background knowledge $B$. Similar to the Inductive logic programming problem the learner \ref{sec:ILP} has to come up with a hypothesis $H$ such that $H$ and the background knowledge imply all the positive examples but none of the negative examples, that is $H \cup B \models E^+$ and $H \cup B \not\models E_i^-$. All three are given in the form of a set of ground atoms, that is they do not contain any free variables.The background knowledge of a task consists of all the rules of the GDL game description that do not concern the predicate being learned. For example in Rock Paper Scissors this would be the facts that give which item beats which (i.e. that scissors beat paper) as can be seen in table \ref{tab:IGGPTask}. The IGGP problem itself is described in chapter \ref{ch:IGGP}.
-
-The IGGP dataset, also given in the same paper as the definition of the problem. It is a collection of 50 games, specified in GDL. The purpose of this database is to standardises the set of games used in the IGGP problem to allow for results to be easily compared. It is in fact the set of games that this paper is based on.
+In IGGP we also have the idea of background knowledge and positive or negative observations. The task itself is closely based on the ILP problem and is described in chapter \ref{ch:IGGP}. The games used for the IGGP problem are taken from the IGGP dataset. It is a collection of 50 games, specified in GDL. The purpose of this database is to standardise the set of games used in the IGGP problem to allow for results to be easily compared. It is the set of games that this paper is based on.
 A mechanism is also provided by the authors to turn these GDL game descriptions in the set into new IGGP tasks. This method plays the games randomly to generate the observations. In this paper we modify the mechanism to generate optimal game traces.
 
-To better understand the IGGP problem and the methods of solving it helps to first understand Prolog. The language is used as the basis for a large number of ILP systems\cite{Metagol/Github,Muggleton/Aleph,Ahlgren/Atom}.
-
-
-\section{Prolog}\label{sec:prolog}
-\ac{I think this should follow your logic programming section}
-Prolog is one of the most popular and well used logical programming languages. The syntax in Prolog for rules and facts are fairly intuitive. A simple fact might be \mintinline{Prolog}{son(bob,alice).}. This tells us that the atom \mintinline{Prolog}{alice} relates the atom \mintinline{Prolog}{bob} in the \mintinline{Prolog}{son} relation. A rule is written \mintinline{Prolog}{parent(X,Y) :- son(Y,X)} which means if we have the relation son of Y and X then X relates Y in parent. The symbol :- is the same as reverse implication. We can query a program in the Prolog environment. If we typed in "\mintinline{Prolog}{parent(alice,bob).}" then it would return true because we have \mintinline{Prolog}{son(bob,alice)} and the rule which tells us that if X is a son of Y else then Y is a parent of X so \mintinline{Prolog}{alice} is a parent of \mintinline{Prolog}{bob}. Predicates can be conjoined with the comma "," (e.g. \mintinline{Prolog}{a(X,Y,Z) :- b(X,Y), c(Z,Y)}). Disjunction is expressed with the semicolon ";" (e.g. \mintinline{Prolog}{a(X,Y,Z) :- b(X,Y) ; c(Z,Y)}\cite{Bratko}.
-
-Prolog answers queries using a process know as proof seach and unification. The unification process is similar to logical unification, two terms unify if they are the same term or if they contain variables that can be instantiated with terms in such a way that the new terms are equal. For example the terms \mintinline{Prolog}{name(bob).} and \mintinline{Prolog}{name(X).} will unify with \mintinline{Prolog}{X = bob}. The Prolog ISO defines the Herbrand Algorithm for unification \cite{PrologISO}. A Prolog query is a set of goals. The Prolog System decides weather they are satisfiable or not. When a query is asked the of the Prolog system it executes something similar to the following algorithm. The exact implementations vary among Prolog systems however they generally follow this procedure.
-\begin{algorithm}
-	\SetKwInOut{Input}{Input}
-	\SetKwProg{Fn}{Function}{}{}
-	\Input{A list of goals $GoalList = G_1,G_2,...,G_M$}
-	\Fn{\textbf{execute} (Program, GoalList, Success):}{
-		\If{$empty(GoalList)$}{$Success \leftarrow true$}{
-			\While{\textbf{not} empty($GoalList$)}{
-				$\textit{Goal} \leftarrow head(GoalList)$\;
-				$OtherGoals \leftarrow tail(GoalList)$\;
-				$Satisfied \leftarrow false$\;
-				\While{\textbf{not} Satisfied and there are more clauses in the program}{
-					Let next clause in the program be $H \vdash B_1,...,B_n$\;
-					Construct a variant of this clause $H' \vdash B_1',...,B_n'$\;
-					$match(Goal,H',MatchOK,Instant)$\;
-					\If{$MatchOK$}{
-						$NewGoals \leftarrow append([B_1',...,B_n'],OtherGoals)$\;
-						$NewGoals \leftarrow substitue(Instant,NewGoals)$\;
-						$execute(Program,NewGoals,$\textit{Satisfied}$)$\;
-					}
-				}
-				$Success \leftarrow$ \textit{Satisfied};\;
-			}
-		}
-	}
-	\caption{Execute Prolog Goals}
-\end{algorithm}
-
-The program listing is searched for a term to unify with. The listing is searched in the order it is written in. When Prolog finds a matching rule it then attempts to sequentially unify the terms of the body using the same method. If the rule has no body then the variables are assigned and the terms unify. If Prolog fails to unify two terms then it backtracks, assigns the last variable a different values. This continues until a proof is found or all possibilities have been exhausted\cite{Bratko}. Prolog forms the basis of two of the ILP systems the we test.
 
 \section{ILP systems used}
-We use three ILP systems to compare the effects of different learning data, Metagol, Aleph and ILASP. There are many approaches to the ILP problem\cite{Svetla/ILPOverview,Cropper/NewIdeas}; the three systems here all represent different approaches to the problem but certainly do not give a full representation of the techniques available.
+We use three ILP systems to compare the effects of different learning data, Metagol, Aleph and ILASP. There are many approaches to the ILP problem \cite{Svetla/ILPOverview,Cropper/NewIdeas}. The three systems here all represent different approaches to the problem but certainly do not give a full representation of the techniques available.
 \subsection{Metagol}
-The Metagol ILP system is a meta-interpreter for Prolog, that is, it is written in the same language is evaluates\cite{Cropper/Thesis,Rolf/Metagol,Metagol/Github}. Metagol takes positive and negative examples, background knowledge and meta-rules. Meta rules are specific to Metagol. They determin the shape of the induced rules and are used to guide the search for a hypothesis. An example of a metarule is the \textit{chain} rule \[P(A,B) \leftarrow Q(A,C),R(C,B)\] The letters P, Q and R represent existentially quantified second order variables, A, B and C are regular Prolog variables \ac{you are mixing logic programming notation and prolog syntax. A, B, and C are typically first-order variables.}. When trying to induce rules the second order variables are substituted for predicates from the background knowledge or the hypothesis itself. To illustrate this consider a metarule being applied when learning the predicate \textit{last(A,B)} where a is a list and b is the last element in it. Given the positive example
+The Metagol ILP system is a meta-interpreter for Prolog, that is, it is written in the same language is evaluates \cite{Cropper/Thesis,Rolf/Metagol,Metagol/Github}. Metagol takes positive and negative examples, background knowledge and meta-rules. Meta rules are specific to Metagol. They determine the shape of the induced rules and are used to guide the search for a hypothesis. An example of a metarule is the \textit{chain} rule \[P(A,B) \leftarrow Q(A,C),R(C,B)\] The letters $P$, $Q$ and $R$ represent existentially quantified second order variables, $A$, $B$ and $C$ are regular first order variables. When trying to induce rules the second order variables are substituted for predicates from the background knowledge or the hypothesis itself. To illustrate this consider a metarule being applied when learning the predicate \textit{last(A,B)} where a is a list and b is the last element in it. Given the positive example
 \begin{minted}{Prolog}
 last([a,l,g,o,r,i,t,h,m],m).
 \end{minted}
@@ -171,39 +103,40 @@ last(A,B) :- reverse(A,C), head(C,B)
 \begin{enumerate}
 \item Select a positive example (an atom) to generalise. If none exists, stop, otherwise proceed to the next step.
 \item Try to prove an atom using background knowledge by delegating the proof to Prolog. If successful, go to step 1, otherwise proceed to the next step.
-\item Try to unify the atom with the head of a metarule and either choose predicates from the background knowledge that imply the head to fill the body. Try proving the body predicate, if it cannot be proved try different BK\footnote{To prove the body predicate the whole procedure is called again with the body predicates as the positive examples. For example if we had \texttt{last([a,b],b)} as our positive example and have tried to use the chain metarule to with reverse and head we would then call the whole procedure again with the positive examples as [reverse([a,b], C),head(C,b)] if this was successful then we continue, otherwise we try different predicates}. If no BK can be found that prove the positive example then try adding a new invented predicate and attempt to prove this\footnote{For example we might replace head with an invented predicate in the previous footnote example}.
+\item Try to unify the atom with the head of a metarule and either choose predicates from the background knowledge that imply the head to fill the body. Try proving the body predicate, if it cannot be proved try different predicate in the background knowledge\footnote{To prove the body predicate the whole procedure is called again with the body predicates as the positive examples. For example if we had \texttt{last([a,b],b)} as our positive example and have tried to use the chain metarule to to prove it with reverse and head we would then call the whole procedure again with the positive examples as \texttt{[reverse([a,b],C),head(C,b)]} if this was successful then we continue, otherwise we try different predicates}. If no predicate can be found that proves the positive example then try adding a new invented predicate and attempt to prove this\footnote{For example we might replace head with an invented predicate in the previous footnote example}.
 \item Once you find a metarule substitution that works add it to the program and move to the next atom
 \end{enumerate}
 
 
-The end hypothesis is all the metarule substitutions. It is the checked that the negative atoms are not implied by the hypothesis, if they are a new one is generated. When the hypothesis is combined with the background knowledge the positive examples, but not the negative examples, are implied.
+The end hypothesis is all the metarule substitutions. It is then checked that the negative atoms are not implied by the hypothesis, if they are a new one is generated. When the hypothesis is combined with the background knowledge the positive examples, but not the negative examples, are implied.
 
-The choice of metarules determines the structure of the hypothesis. Different choice of metarules will allow different hypotheses to be generated. Deciding which metarules to use for a given task is an unsolved problem \cite{Cropper/Thesis}. For this task a set of 9 derivationally irreducible metarules are used which remain consistent across all tasks.
-\subsection{ALEPH}\label{sec:aleph}
-Aleph is an Prolog variant of the ILP system Progol \cite{Muggleton/Aleph}. As input, like any other ILP system, Aleph takes positive and negative examples represented as a set of facts along with the background knowledge. It also requires \textit{mode declarations} and \textit{determinations} which are specific to Aleph. Mode declarations specify the type of the inputs and outputs of each predicate used e.g. \texttt{plus(+integer,+integer,-integer)} where \texttt{+} signifies an input and \texttt{-} an output.
+The choice of metarules determines the structure of the hypothesis. Different choices of metarules will allow different hypotheses to be generated. Deciding which metarules to use for a given task is an unsolved problem  \cite{Cropper/Thesis}. For this task a set of 9 derivationally irreducible metarules are used which remain consistent across all tasks.
+
+\subsection{Aleph}\label{sec:aleph}
+
+Aleph is a Prolog variant of the ILP system Progol  \cite{Muggleton/Aleph}. As input, like any other ILP system, Aleph takes positive and negative examples represented as a set of facts along with the background knowledge. It also requires \textit{mode declarations} and \textit{determinations} which are specific to Aleph. Mode declarations specify the type of the inputs and outputs of each predicate used e.g. \texttt{plus(+integer,+integer,-integer)} where \texttt{+} signifies an input and \texttt{-} an output.
 Determinations specify which predicates can go in the body of a hypothesis. These determinations take the form of pairs of predicates, the first being the head of the clause and the second a predicate that can appear in its body.
 
-For each predicate we would like to learn in the IGGP problem we give Aleph the determinations consisting of every target predicate (next,goal and legal) paired with every background predicate (which are specific to each game). Luckily there has been some work to induce mode declarations from the determinations \cite{McCreath/Meta-extraction} so we do not need to come up with our own mode declarations.
+For each predicate we would like to learn in the IGGP problem we give Aleph the determinations consisting of every target predicate (next,goal and legal) paired with every background predicate (which are specific to each game). Luckily there has been some work to induce mode declarations from the determinations  \cite{McCreath/Meta-extraction} so we do not need to come up with our own mode declarations.
 
 A basic outline of the Aleph algorithm is taken from the aleph website \footnote{http://www.cs.ox.ac.uk/activities/programinduction/Aleph/aleph.html accessed 26/03/2020}:
 \begin{enumerate}
 \item Select an example to be generalised. If none exist, stop, otherwise proceed to the
 next step.
-\item Construct the most specific clause (also known as the bottom clause \cite{Muggleton/Aleph}) that entails
+\item Construct the most specific clause (also known as the bottom clause  \cite{Muggleton/Aleph}) that entails
 the example selected and is within language restrictions provided.
-\item Search for a clause more general than the bottom clause. This step is done by search-
-ing for some subset of the literals in the bottom clause that has the 'best' score.
+\item Search for a clause more general than the bottom clause. This step is done by searching for some subset of the literals in the bottom clause that has the 'best' score.
 \item The clause with the best score is added to the current theory and all the examples
 made redundant are removed. Return to step 1.
 \end{enumerate}
 
-Mode declarations and determinations are used in step 2 of this procedure to bound the hypothesis space. Only predicates that are mentioned in the determinations of the hypothesis and are of the correct type are tried. The bottom clause constructed is the most specific clause that entails the example. Therefore a clause with the same head and any subset of the predicates of the body will be more general than the bottom clause. Aleph only considers these generalisations of this bottom clause. The search space is therefore bounded by $2^n$ with $n$ being the number of predicates in the bottom clause.
+Mode declarations and determinations are used in step 2 of this procedure to bound the hypothesis space. Only predicates that are mentioned in the determinations of the hypothesis and are of the correct type are tried. The bottom clause constructed is the most specific clause that entails the example. Therefore a clause with the same head and any subset of the predicates of the body will be more general than the bottom clause. Aleph only considers these generalisations of this bottom clause.
 
-By default Aleph preforms a bounded breath first search on all the possible rules, enumerating shorter clauses before longer clauses. The search is bounded by several parameters such as maximum clause size and maximum proof depth. The best score is selected as the one with the best $P - N$ value where $P$ is the number of positive rules entailed by the hypothesis and $N$ is the number of negative rules entailed. For this paper we will use Aleph with the default settings.
+The search space is therefore bounded by $2^n$ with $n$ being the number of predicates in the bottom clause. By default Aleph preforms a bounded breath first search on all the possible rules, enumerating shorter clauses before longer clauses. The search is bounded by several parameters such as maximum clause size and maximum proof depth. For this paper we will use Aleph with the default settings.
 
 \subsection{ILASP}
 
-ILASP is an ILP system based on Answer Set Programming (ASP). An introduction to ASP can be found here \cite{Corapi/ASP}. ILASP uses a subset of ASP that is defined in these papers\cite{ILASP-Manuel,MarkLaw/OG-ILASP,MarkLaw/Thesis} The ILASP process effectively generates all possible rules of a certain length, turns the problem into an ASP problem that adds a predicate to each rule allowing it to be active or inactive. It then uses the ASP solver clingo\cite{Clingo}  to check which rules should be active if the program is to be consistent with the positive and the negation of the negative examples\cite{MarkLaw/OG-ILASP,MarkLaw/Thesis}. In this paper we use a version of ILASP based on ILASP2i\cite{MarkLaw/ILASP2i} which was developed with the IGGP problem in mind\cite{Cropper/IGGP}. As one input ILASP takes a hypothesis search space, i.e. the set of all hypotheses to be considered. This is constructed using the type signatures given for each problem that are provided in the IGGP dataset.
+ILASP is an ILP system based on Answer Set Programming (ASP). An introduction to ASP can be found here  \cite{Corapi/ASP}. ILASP uses a subset of ASP that is defined in these papers  \cite{ILASP-Manuel,MarkLaw/OG-ILASP,MarkLaw/Thesis} The ILASP process effectively generates all possible rules of a certain length, turns the problem into an ASP problem that adds a predicate to each rule allowing it to be active or inactive. It then uses the ASP solver \textit{clingo}  \cite{Clingo}  to check which rules should be active if the program is to be consistent with the positive and the negation of the negative examples  \cite{MarkLaw/OG-ILASP,MarkLaw/Thesis}. In this paper we use a version of ILASP based on ILASP2i  \cite{MarkLaw/ILASP2i} which was developed with the IGGP problem in mind \cite{Cropper/IGGP}. As one input ILASP takes a hypothesis search space, i.e. the set of all hypotheses to be considered. This is constructed using the type signatures given for each problem that are provided in the IGGP dataset.
 
 An ILASP task is defined as a tuple $T = \langle B,S_M,E^+E^-\rangle$ where $B$ is the background knowledge, $S_M$ is the hypothesis space, and $E^+$ and $E^-$ are the positive and negative examples. The ILASP procedure is given in algorithm \ref{alg:ILASP}.
 \begin{algorithm}[H]\label{alg:ILASP}
@@ -220,4 +153,4 @@ An ILASP task is defined as a tuple $T = \langle B,S_M,E^+E^-\rangle$ where $B$ 
     \caption{ILASP outline}
 \end{algorithm}
 
-The approaches used by ILASP have proved to be well suited to the IGGP task \cite{Cropper/IGGP}. We expect it to do well in the experiments conducted.
+The approaches used by ILASP have proved to be well suited to the IGGP task  \cite{Cropper/IGGP}.
